--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -51,6 +51,20 @@
                 </form>
             </div>
         }
+        else if (Context.Session.GetInt32("Rol") == 2) // Técnico
+        {
+            <div class="col-md-3 col-lg-2 sidebar d-flex flex-column justify-content-between align-items-center text-white bg-dark py-4">
+                <div class="text-center mb-5">
+                    <h5 class="text-white mb-1">Bienvenido</h5>
+                    <h6 class="text-white">@Context.Session.GetString("NombreUsuario")</h6>
+                </div>
+
+                <form asp-action="Logout" asp-controller="Auth" method="post" class="mt-auto w-100 px-3 mb-4">
+                    @Html.AntiForgeryToken()
+                    <button class="btn btn-outline-light w-100"><i class="bi bi-box-arrow-right me-1"></i> Cerrar sesión</button>
+                </form>
+            </div>
+        }
 
         <div class="col-md-9 col-lg-10 p-4 contenido" style="margin-left: 240px;">
             <h2>@ViewData["Title"]</h2>
@@ -146,7 +160,7 @@
                             }
                             </td>
                             <td>
-                                <a href="@Url.Action("Detalle", "Dashboard", new { id = item.IdDocumento })" class="btn btn-info btn-sm">Ver Detalle</a>
+                                <a href="@Url.Action("Detalle", "Dashboard", new { id = item.IdDocumento })" class="btn btn-success btn-sm mt-2">Ver Detalle</a>
                             </td>
                         </tr>
                     }
