--- a/wwwroot/css/Dashboard.css
+++ b/wwwroot/css/Dashboard.css
@@ -10,6 +10,7 @@ body {
   width: 240px;
   left: 0;
   z-index: 1000;
+  display: flex;
 }
 
 .sidebar a {
@@ -39,7 +40,14 @@ body {
     margin-left: 0 !important;
   }
   .sidebar {
-    display: none;
+    display: none !important;
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    z-index: 1050;
+    transition: left 0.3s ease;
   }
 
   h2 {
