--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -189,7 +189,12 @@
             <div class="tarjetas-dashboard d-block d-md-none mt-3">
                 @foreach (var item in Model)
                 {
-<div class="card mb-3 p-3 shadow-sm @(item.TecnicoAsignado == Context.Session.GetString("NombreUsuario") || item.ColaboradorAsignado == Context.Session.GetString("NombreUsuario") ? "resaltado-pendiente" : "")">
+                        var esAsignadoATi = item.TecnicoAsignado == Context.Session.GetString("NombreUsuario");
+                        var claseResaltado = esAsignadoATi ? "bg-warning-subtle border border-warning" : "";
+                    
+                    <div class="card shadow-sm mb-3">
+                        <div class="p-3 rounded @claseResaltado">
+
                         <h5>#@item.NumeroDocumento - @item.EmpresaDestino</h5>
                         <p><strong>Tipo:</strong>
                             @if (item.Suministro) { <i class="bi bi-box-seam text-primary me-1"></i> }
@@ -252,6 +257,7 @@
                         }
                         </p>
                         <a href="@Url.Action("Detalle", "Dashboard", new { id = item.IdDocumento })" class="btn btn-success btn-sm mt-2">Ver Detalle</a>
+                    </div>
                     </div>
                 }
             </div>
