--- a/Views/Dashboard/historial.cshtml
+++ b/Views/Dashboard/historial.cshtml
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/Historial.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Dashboard.css" asp-append-version="true" />
 </head>
 <body>
     <div class="row g-0">
@@ -68,7 +69,7 @@
             </div>
         }
         <!-- Contenido principal -->
-        <div class="col-md-9 col-lg-10 p-4 contenido">
+        <div class="col-md-9 col-lg-10 p-4 contenido" style="margin-left: 240px;">
             <h2>@ViewData["Title"]</h2>
 
             <div class="d-none d-md-block">
