--- a/Views/Dashboard/Crear.cshtml
+++ b/Views/Dashboard/Crear.cshtml
@@ -77,6 +77,12 @@
         <input asp-for="Mantenimiento" class="form-check-input" id="Mantenimiento" />
         <label asp-for="Mantenimiento" class="form-check-label">Mantenimiento</label>
     </div>
+    
+    <div class="form-group form-check">
+        <input asp-for="Soporte" class="form-check-input" id="Soporte" />
+        <label asp-for="Soporte" class="form-check-label">Soporte</label>
+    </div>
+
 
     <div id="mantenimientoCampos" style="display:none;">
         <div class="form-group">
