--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -21,6 +21,7 @@
     <title>@ViewData["Title"]</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/Dashboard.css" asp-append-version="true" />
 </head>
 
@@ -121,6 +122,10 @@
                                 @if (item.Mantenimiento)
                                 {
                                     <i class="bi bi-wrench-adjustable text-warning me-1" data-bs-toggle="tooltip" title="Mantenimiento"></i>
+                                }
+                                @if (item.Soporte)
+                                {
+                                    <i class="bi bi-headset text-info me-1" data-bs-toggle="tooltip" title="Soporte"></i>
                                 }
                             </td>
                             <td>@item.EmpresaDestino</td>
