UPDATE soporte icono

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -125,7 +125,7 @@
                                 }
                                 @if (item.Soporte)
                                 {
-                                    <i class="bi bi-headset text-info me-1" data-bs-toggle="tooltip" title="Soporte"></i>
+                                    <i class="bi bi-laptop text-dark me-1" data-bs-toggle="tooltip" title="Soporte"></i>
                                 }
                             </td>
                             <td>@item.EmpresaDestino</td>
