--- a/Views/Dashboard/historial.cshtml
+++ b/Views/Dashboard/historial.cshtml
@@ -106,6 +106,10 @@
                                     {
                                         <i class="bi bi-wrench-adjustable text-warning me-1" data-bs-toggle="tooltip" title="Mantenimiento"></i>
                                     }
+                                    @if (item.Soporte)
+                                    {
+                                        <i class="bi bi-laptop text-dark me-1" data-bs-toggle="tooltip" title="Soporte"></i>
+                                    }
                                 </td>
                                 <td>@(item.EmpresaDestino)</td>
                                 <td>
